# ungoogled-chromium-portablelinux

./: .gitignore  Dockerfile-stage3  README.md  build.sh  check_patch_type.sh  disable-node-version-check.patch  docker-build.sh  docker-package-appimage.sh  drop-nodejs-version-check.patch  flags.gn  flags.linux.gn  flags.portable.gn  patch_utils.sh  revision.txt  use-oauth2-client-switches-as-default.patch
.github/actions/package/: action.yml
.github/actions/release/: action.yml
.github/scripts/: build.sh  export-cache.sh  import-cache.sh
.github/workflows/: build-steps.yml  build.yml  guix-pack.yml
docker/: Dockerfile  build.Dockerfile  build.Dockerfile.bullseye  metrics.cfg  package.Dockerfile
docker-stage1/: Dockerfile
docker/builder/: .bash_aliases
docker/builder/.config/depot_tools/: metrics.cfg
package/: .gitignore  docker-package.sh  package.sh  prepare-publish.sh  ungoogled-chromium.desktop  ungoogled-chromium.yaml  ungoogled-chromium.yml
patches/: REVERT-clang-version-check.patch  REVERT-disable-autoupgrading-debug-info.patch  add_casts_in_static_initializers.patch  av1_vaapi_video_encoder_delegate.patch  disable-GlobalMediaControlsCastStartStop.patch  rust-version-check.patch  series  use-oauth2-client-switches-as-default.patch
patches/alpine/: chromium-85-NearbyShareEncryptedMetadataKey-include.patch  chromium-85-sim_hash-include.patch  default-pthread-stacksize.patch  elf-arm.patch  musl-crashpad.patch  musl-fixes-breakpad.patch  musl-fixes.patch  musl-hacks.patch  musl-sandbox.patch  no-mallinfo.patch  resolver.patch  swiftshader.patch  upstream-fix-building-with-unbundled-libxml.patch  upstream-move-RemoteTreeNode-declaration.patch  upstream-rebuild-Linux-frame-button-cache-when-activation.patch  upstream-rename-Relayout-in-DesktopWindowTreeHostPlatform.patch  upstream-sync-enable-USSPasswords-by-default.patch
patches/busybox/: prebuild-remove-gnu-patch-options.patch  remove-nonstandard-gzip-options.patch
patches/fixes/: chromium-88-AXTreeFormatter-include.patch  chromium-88-ityp-include.patch
patches/gcc/: chromium-84-blink-disable-clang-format.patch  chromium-88-BookmarkModelObserver-include.patch  chromium-88-CompositorFrameReporter-dcheck.patch  chromium-88-StringPool-include.patch  chromium-88-compiler.patch  chromium-88-dawn-static.patch  chromium-88-federated_learning-include.patch  chromium-88-ideographicSpaceCharacter.patch
patches/musl/: cups-change-sysroot.patch  disable-tcmalloc.patch  fix-yasm-config.patch  fontconfig-use-rand.patch  sqlite-use-posix-ioctl.patch  stack_size.patch  yasm-remove-gettext.patch
patches/ubuntu/: no-new-ninja-flag.patch
patches/ungoogled-chromium/portablelinux/: drop-nodejs-version-check.patch  fix-compiling-on-arm64.patch  use-oauth2-client-switches-as-default.patch
scripts/: build.sh  docker-build.sh  package.sh  shared.sh
tar_includes/: README
