custom_toolchain="//build/toolchain/linux/unbundle:default"
host_toolchain="//build/toolchain/linux/unbundle:default"
clang_base_path="/usr"
is_official_build=true
symbol_level=0
disable_fieldtrial_testing_config=true
blink_enable_generated_code_formatting=false
blink_symbol_level=0
ffmpeg_branding="Chrome"
proprietary_codecs=true
fatal_linker_warnings=false
rtc_use_pipewire=true
is_clang=true
is_debug=false
enable_rust=false
use_kerberos=false
use_sysroot=true
use_vaapi=true
use_system_libffi=false

#enable_hevc_parser_and_hw_decoder=true
#enable_iterator_debugging=false
#enable_platform_hevc=true
#enable_widevine=true
#link_pulseaudio=true
#use_custom_libcxx=false
#use_gnome_keyring=false
