is_official_build=true
symbol_level=0
disable_fieldtrial_testing_config=true
blink_enable_generated_code_formatting=false
blink_symbol_level=0
ffmpeg_branding="Chrome"
proprietary_codecs=true
fatal_linker_warnings=false
rtc_use_pipewire=true
is_clang=true
is_debug=false
use_kerberos=false
use_sysroot=true
use_vaapi=true
use_system_libffi=false
