blink_symbol_level=0
custom_toolchain="//build/toolchain/linux/unbundle:default"
enable_iterator_debugging=false
enable_swiftshader=false
fatal_linker_warnings=false
ffmpeg_branding="Chrome"
host_toolchain="//build/toolchain/linux/unbundle:default"
is_clang=true
is_debug=false
is_official_build=true
proprietary_codecs=true
symbol_level=0
use_gnome_keyring=false
use_kerberos=false
use_sysroot=false

is_clang=false
is_debug=false
custom_toolchain=\"//build/toolchain/linux/unbundle:default\"
host_toolchain=\"//build/toolchain/linux/unbundle:default\"
blink_symbol_level=0
symbol_level=0
is_cfi=false
icu_use_data_file=true
use_allocator=\"none\"
use_allocator_shim=false
use_atk=false
use_cups=false
use_dbus=false
use_sysroot=false
use_system_harfbuzz=true
use_vaapi=false
use_custom_libcxx=false
use_kerberos=false
use_lld=false
use_pulseaudio=false
use_gold=false
use_gnome_keyring=false
use_x11=true
ozone_platform_wayland=false
enable_widevine=false
is_desktop_linux=true
rtc_use_pipewire=false
link_pulseaudio=false
proprietary_codecs=true
ffmpeg_branding=\"Chrome\"
treat_warnings_as_errors=false
fatal_linker_warnings=false
chrome_pgo_phase=0
enable_hangout_services_extension=false
enable_js_type_check=false
enable_mdns=false
enable_mse_mpeg2ts_stream_parser=true
enable_nacl=false
enable_nacl_nonsfi=false
enable_one_click_signin=false
enable_reading_list=false
enable_remoting=false
enable_reporting=false
enable_service_discovery=false
exclude_unwind_tables=true
fieldtrial_testing_like_official_build=true
google_api_key=\"\"
google_default_client_id=\"\"
google_default_client_secret=\"\"
safe_browsing_mode=0
use_official_google_api_keys=false
use_unofficial_version_number=false
