is_clang=false
is_debug=false
custom_toolchain="//build/toolchain/linux/unbundle:default"
host_toolchain="//build/toolchain/linux/unbundle:default"
blink_symbol_level=0
symbol_level=0
is_cfi=false
icu_use_data_file=true
use_allocator="none"
use_allocator_shim=false
use_atk=false
use_cups=false
use_dbus=false
use_sysroot=false
use_system_harfbuzz=true
use_vaapi=false
use_custom_libcxx=false
use_kerberos=false
use_lld=false
use_pulseaudio=false
use_gold=false
use_gnome_keyring=false
use_x11=true
ozone_platform_wayland=false
enable_widevine=false
is_desktop_linux=true
rtc_use_pipewire=false
link_pulseaudio=false
proprietary_codecs=true
ffmpeg_branding="Chrome"
fatal_linker_warnings=false
