blink_symbol_level=0
custom_toolchain="//build/toolchain/linux/unbundle:default"
fatal_linker_warnings=false
ffmpeg_branding="Chrome"
host_toolchain="//build/toolchain/linux/unbundle:default"
icu_use_data_file=true
is_debug=false
link_pulseaudio=false
proprietary_codecs=true
rtc_use_pipewire=false
symbol_level=0
use_allocator="none"
use_allocator_shim=false
use_atk=false
use_cups=false
use_custom_libcxx=false
use_dbus=false
use_gnome_keyring=false
use_gold=false
use_kerberos=false
use_pulseaudio=false
use_sysroot=false
